--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<header>
 		<div class="ui borderless main menu">
 			<div class="ui text container">
-				<a href="#" class="item">Tambah Data</a>
-				<a href="#" class="item">Lihat Data</a>
+				<a href="tambah.html" class="item">Tambah Data</a>
+				<a href="index.html" class="item">Lihat Data</a>
 			</div>
 		</div>
 	</header>
